--- a/index.htm
+++ b/index.htm
@@ -134,7 +134,7 @@
 
             <div class="container">
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-white">Values</h2>
-                <p class="text-center text-lg mb-8 text-white">The values that shape my approach:</p>
+                <p class="text-center text-lg mb-8 text-white">Guiding principles that drive my work:</p>
                 <div class="ideals-slider" role="region" aria-label="Core Values Slider">
                     <div class="mask" id="slider-mask">
                         <!-- Slides will be dynamically inserted here -->
