--- a/index.htm
+++ b/index.htm
@@ -173,7 +173,7 @@
                             teams, I lead efforts that increase homeowner engagement and drive measurable results:</p>
                         <ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
                             <li><span class="font-semibold">Calculators:</span> Built and launched a suite of
-                                calculators, increasing the conversion rate to our paid product from
+                                calculators, increasing the conversion rate to our paid product from a baseline of
                                 <strong>0.1%</strong> to <strong>7.3%</strong>.
                             </li>
                             <li><span class="font-semibold">QuoteScore:</span> A tool that helps homeowners understand
