--- a/index.htm
+++ b/index.htm
@@ -471,10 +471,7 @@
                                 <strong>30</strong> languages, improving global reach by targeting EMEA and APAC
                                 regions.
                             </li>
-                            <li><span class="font-semibold">Go-To-Market Strategy:</span> Successfully executed
-                                comprehensive product rollouts by coordinating with Customer Success, Marketing, and
-                                Sales teams, ensuring effective market penetration and alignment with strategic business
-                                goals.</li>
+                            <li><span class="font-semibold">Go-To-Market Strategy:</span> Coordinated comprehensive product rollouts, working closely with Customer Success Managers, Product Marketing, and Global Sales teams.</li>
                         </ul>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
                             <img src="https://middleton.io/images/oracle-engage-v1.png" alt="Oracle Engage v1"
@@ -1065,7 +1062,7 @@
 
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-4 text-center">
-            <a href="https://github.com/kevinmmiddleton/about/raw/6190a25ae6258495bdadc7b88083e1b0a79c715b/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2010-13-2024.pdf"
+            <a href="https://github.com/kevinmmiddleton/about/raw/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2011-02-2024.pdf"
                 download
                 class="inline-block bg-white text-blue-500 px-6 py-3 rounded-full hover:bg-gray-200 transition-colors mb-4">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline-block mr-2" fill="none"
