--- a/adam/index.html
+++ b/adam/index.html
@@ -1,1 +1,257 @@
+<!DOCTYPE html>
+<html lang="en" class="scroll-smooth">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+    <title>Adam Schwenk - Product Manager</title>
+    <meta name="description" content="Adam Schwenk is an accomplished product leader with 14 years of experience in fintech, gaming, messaging, and telecom.">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --color-primary: #1a5f7a;
+            --color-secondary: #159895;
+            --color-accent: #57c5b6;
+            --color-background: #f9f9f9;
+            --color-text: #333333;
+            --color-text-light: #ffffff;
+        }
 
+        html, body {
+            font-family: 'Roboto', sans-serif;
+            color: var(--color-text);
+            background: linear-gradient(to bottom right, var(--color-primary), var(--color-secondary));
+            min-height: 100vh;
+        }
+
+        .btn-primary {
+            background-color: var(--color-accent);
+            color: var(--color-text-light);
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-primary:hover {
+            background-color: var(--color-secondary);
+        }
+
+        .section-content {
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 0.5rem;
+            padding: 2rem;
+            margin-bottom: 2rem;
+        }
+
+        .skill-pill {
+            background-color: var(--color-accent);
+            color: var(--color-text-light);
+            border-radius: 9999px;
+            padding: 0.25rem 0.75rem;
+            display: inline-block;
+            margin: 0.25rem;
+            font-size: 0.875rem;
+        }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-30px);
+            }
+            60% {
+                transform: translateY(-15px);
+            }
+        }
+
+        .bounce {
+            animation: bounce 2s infinite;
+        }
+    </style>
+    <script type="text/javascript">
+        function decodeEmail(encoded) {
+            return encoded.split('').reverse().join('').replace('TA', '@').replace('TOD', '.');
+        }
+        
+        function createMailtoLink() {
+            const encoded = 'moc.liamgTAknewchsmada';
+            const decoded = decodeEmail(encoded);
+            const mailtoLinks = document.querySelectorAll('.email-link');
+            mailtoLinks.forEach(link => {
+                link.href = `mailto:${decoded}`;
+            });
+        }
+
+        document.addEventListener('DOMContentLoaded', createMailtoLink);
+    </script>
+</head>
+<body class="min-h-screen overflow-x-hidden">
+    <header class="fixed top-0 left-0 right-0 bg-white bg-opacity-90 shadow-md z-50">
+        <nav class="container mx-auto px-6 h-16 flex items-center justify-between">
+            <a href="#hero" class="text-xl font-bold" style="color: var(--color-primary);">Adam Schwenk</a>
+            <ul class="hidden md:flex md:space-x-6">
+                <li><a href="#hero" class="hover:text-accent" style="color: var(--color-secondary);">Home</a></li>
+                <li><a href="#about" class="hover:text-accent" style="color: var(--color-secondary);">About</a></li>
+                <li><a href="#experience" class="hover:text-accent" style="color: var(--color-secondary);">Experience</a></li>
+                <li><a href="#skills" class="hover:text-accent" style="color: var(--color-secondary);">Skills</a></li>
+                <li><a href="#connect" class="hover:text-accent" style="color: var(--color-secondary);">Connect</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="pt-16 container mx-auto px-4">
+        <section id="hero" class="min-h-screen flex flex-col items-center justify-center text-center text-white">
+            <h1 class="text-4xl font-bold mb-2">Adam Schwenk</h1>
+            <p class="text-xl">Product Manager</p>
+            <p class="mt-4 max-w-2xl md:max-w-4xl mx-auto">Accomplished product leader with 14 years of experience in<br class="hidden md:inline"> fintech, gaming, messaging, and telecom.</p>
+            <a href="#about" class="mt-8 bounce">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+                </svg>
+            </a>
+        </section>
+
+        <section id="about" class="py-20">
+            <div class="section-content">
+                <h2 class="text-3xl font-bold text-center mb-8" style="color: var(--color-primary);">About Me</h2>
+                <div class="flex flex-col md:flex-row items-center md:items-start gap-8 max-w-4xl mx-auto">
+                    <div class="w-48 h-48 md:w-64 md:h-64 flex-shrink-0">
+                        <img 
+                            src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/1686149808911-9eNMr2dl3u9od1Gcmza0PaAQcEuuI8.jpeg"
+                            alt="Adam Schwenk - Product Manager"
+                            class="w-full h-full object-cover rounded-full shadow-lg"
+                        >
+                    </div>
+                    <div>
+                        <p class="text-lg mb-4">
+                            I specialize in data-driven solutions and Agile methodologies, delivering customer-centric innovations from strategy to launch in fast-paced environments. My expertise lies in aligning customer needs with business objectives through user-centered design.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="experience" class="py-20">
+            <div class="section-content">
+                <h2 class="text-3xl font-bold text-center mb-8" style="color: var(--color-primary);">Professional Experience</h2>
+                <div class="space-y-6">
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Senior Manager Technology</h3>
+                        <p class="text-sm mb-2" style="color: var(--color-secondary);">Coaching Season | April 2023 – Present | San Francisco, CA</p>
+                        <ul class="list-disc list-inside">
+                            <li>Integrated Generative AI for personalized coaching.</li>
+                            <li>Achieved 20% cost savings in CRM selection.</li>
+                            <li>Hired and trained design and development teams.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Principal Product Manager, Product Innovation</h3>
+                        <p class="text-sm mb-2" style="color: var(--color-secondary);">Verizon | Oct 2019 – Apr 2023 | San Francisco, CA</p>
+                        <ul class="list-disc list-inside">
+                            <li>Improved response times by 40%, satisfaction by 25% with AI chatbot.</li>
+                            <li>Tripled subscriptions and revenue for My Numbers VOIP app.</li>
+                            <li>Launched products across accessibility, entertainment, and education.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Growth Product Manager (Contract)</h3>
+                        <p class="text-sm mb-2" style="color: var(--color-secondary);">Wells Fargo | Nov 2018 – Oct 2019 | San Francisco, CA</p>
+                        <ul class="list-disc list-inside">
+                            <li>Enhanced customer engagement by 20% with onboarding and educational features.</li>
+                            <li>Increased acquisition by 20% with referral incentives.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="skills" class="py-20">
+            <div class="section-content">
+                <h2 class="text-3xl font-bold text-center mb-8" style="color: var(--color-primary);">Skills &amp; Expertise</h2>
+                <div class="space-y-6">
+                    <div>
+                        <h3 class="text-xl font-semibold mb-4" style="color: var(--color-accent);">Technical Skills</h3>
+                        <div>
+                            <span class="skill-pill">Generative AI</span>
+                            <span class="skill-pill">AI & Machine Learning</span>
+                            <span class="skill-pill">SQL</span>
+                            <span class="skill-pill">Real-Time Analytics</span>
+                            <span class="skill-pill">API Integration</span>
+                            <span class="skill-pill">Test-Driven Development (TDD)</span>
+                            <span class="skill-pill">Behavior-Driven Development (BDD)</span>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-semibold mb-4" style="color: var(--color-accent);">Leadership & Collaboration</h3>
+                        <div>
+                            <span class="skill-pill">Agile (Scrum, Kanban)</span>
+                            <span class="skill-pill">Cross-Functional Collaboration</span>
+                            <span class="skill-pill">Stakeholder Management</span>
+                            <span class="skill-pill">Team Building</span>
+                            <span class="skill-pill">Mentorship</span>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-semibold mb-4" style="color: var(--color-accent);">Strategic Planning & Execution</h3>
+                        <div>
+                            <span class="skill-pill">Product Strategy</span>
+                            <span class="skill-pill">Strategic Vision</span>
+                            <span class="skill-pill">Data-Driven Decisions</span>
+                            <span class="skill-pill">MVP</span>
+                            <span class="skill-pill">Customer Research</span>
+                            <span class="skill-pill">Competitive Analysis</span>
+                            <span class="skill-pill">A/B Testing</span>
+                            <span class="skill-pill">User-Centric Innovation</span>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-semibold mb-4" style="color: var(--color-accent);">Tools</h3>
+                        <div>
+                            <span class="skill-pill">Jira</span>
+                            <span class="skill-pill">Confluence</span>
+                            <span class="skill-pill">Trello</span>
+                            <span class="skill-pill">Figma</span>
+                            <span class="skill-pill">Sketch</span>
+                            <span class="skill-pill">InVision</span>
+                            <span class="skill-pill">Fullstory</span>
+                            <span class="skill-pill">Apptimize</span>
+                            <span class="skill-pill">Optimizely</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="education" class="py-20">
+            <div class="section-content">
+                <h2 class="text-3xl font-bold text-center mb-8" style="color: var(--color-primary);">Education & Certifications</h2>
+                <div class="bg-white p-6 rounded-lg shadow-md max-w-2xl mx-auto">
+                    <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Bachelor of Science in Environmental Engineering</h3>
+                    <p class="mb-4">California Polytechnic State University, San Luis Obispo</p>
+                    <h4 class="text-lg font-semibold mb-2" style="color: var(--color-accent);">Certifications</h4>
+                    <ul class="list-disc list-inside">
+                        <li>Product Management for AIML – PM Exercises, 2023</li>
+                        <li>Agile Product Workshop – General Assembly, 2017</li>
+                        <li>Product Team Workshop – Silicon Valley Product Group, 2017</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section id="connect" class="py-20">
+            <div class="section-content text-center">
+                <h2 class="text-3xl font-bold mb-8" style="color: var(--color-primary);">Let's Connect!</h2>
+                <div class="flex justify-center space-x-4">
+                    <a href="#" class="btn-primary px-4 py-2 rounded email-link">Email</a>
+                    <a href="https://linkedin.com/in/aschwenk" target="_blank" rel="noopener noreferrer" class="btn-primary px-4 py-2 rounded">LinkedIn</a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="bg-gray-800 text-white py-8 text-center">
+        <p>&copy; 2024 Adam Schwenk. All rights reserved.</p>
+    </footer>
+</body>
+</html>
