--- a/adam/index.html
+++ b/adam/index.html
@@ -115,16 +115,16 @@
         <section id="about" class="py-20">
             <div class="section-content">
                 <h2 class="text-3xl font-bold text-center mb-8" style="color: var(--color-primary);">About Me</h2>
-                <div class="flex flex-col md:flex-row items-center md:items-start gap-8 max-w-4xl mx-auto">
-                    <div class="w-48 h-48 md:w-64 md:h-64 flex-shrink-0">
+                <div class="flex flex-col md:flex-row items-center justify-center gap-8 max-w-4xl mx-auto">
+                    <div class="w-48 h-48 md:w-64 md:h-64 flex-shrink-0 mb-4 md:mb-0 flex items-center justify-center">
                         <img 
                             src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/1686149808911-9eNMr2dl3u9od1Gcmza0PaAQcEuuI8.jpeg"
                             alt="Adam Schwenk - Product Manager"
                             class="w-full h-full object-cover rounded-full shadow-lg"
                         >
                     </div>
-                    <div>
-                        <p class="text-lg mb-4">
+                    <div class="md:flex-1">
+                        <p class="text-lg">
                             I specialize in data-driven solutions and Agile methodologies, delivering customer-centric innovations from strategy to launch in fast-paced environments. My expertise lies in aligning customer needs with business objectives through user-centered design.
                         </p>
                     </div>
@@ -138,28 +138,68 @@
                 <div class="space-y-6">
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Senior Manager Technology</h3>
-                        <p class="text-sm mb-2" style="color: var(--color-secondary);">Coaching Season | April 2023 – Present | San Francisco, CA</p>
+                        <p class="text-sm mb-2" style="color: var(--color-secondary);">COACHING SEASON | April 2023 – Present | San Francisco, CA</p>
                         <ul class="list-disc list-inside">
-                            <li>Integrated Generative AI for personalized coaching.</li>
-                            <li>Achieved 20% cost savings in CRM selection.</li>
-                            <li>Hired and trained design and development teams.</li>
+                            <li>Early-stage coaching startup aimed at democratizing career growth. Integrated Generative AI to enhance user experiences, streamline responses, and personalize coaching pathways.</li>
+                            <li>Led strategic software evaluation and implementation, achieving 20% cost savings through CRM selection.</li>
+                            <li>Spearheaded cross-functional alignment across five departments, resulting in streamlined booking flow and a complete website redesign within target timelines.</li>
                         </ul>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Principal Product Manager, Product Innovation</h3>
-                        <p class="text-sm mb-2" style="color: var(--color-secondary);">Verizon | Oct 2019 – Apr 2023 | San Francisco, CA</p>
+                        <p class="text-sm mb-2" style="color: var(--color-secondary);">VERIZON | Oct 2019 – Apr 2023 | San Francisco, CA</p>
                         <ul class="list-disc list-inside">
-                            <li>Improved response times by 40%, satisfaction by 25% with AI chatbot.</li>
-                            <li>Tripled subscriptions and revenue for My Numbers VOIP app.</li>
-                            <li>Launched products across accessibility, entertainment, and education.</li>
+                            <li>Drove user-centric product innovation serving 20M+ customers and secured a patent for features in Verizon Messages.</li>
+                            <li>Achieved a 4+ star rating and tripled subscriptions for the Verizon My Numbers app, increasing revenue by 60%.</li>
+                            <li>Collaborated with startups to launch products focused on accessibility and next-generation entertainment, fostering partnerships within the Verizon ecosystem.</li>
                         </ul>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Growth Product Manager (Contract)</h3>
-                        <p class="text-sm mb-2" style="color: var(--color-secondary);">Wells Fargo | Nov 2018 – Oct 2019 | San Francisco, CA</p>
+                        <p class="text-sm mb-2" style="color: var(--color-secondary);">WELLS FARGO | Nov 2018 – Oct 2019 | San Francisco, CA</p>
                         <ul class="list-disc list-inside">
-                            <li>Enhanced customer engagement by 20% with onboarding and educational features.</li>
-                            <li>Increased acquisition by 20% with referral incentives.</li>
+                            <li>Boosted app engagement by 20% through improved onboarding and customer journeys for the Greenhouse app.</li>
+                            <li>Increased user acquisition by 20% with an incentivized referral system and implemented a comprehensive communication roadmap, enhancing the customer experience.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Senior Product Manager/Product Owner – Small Business Mobile</h3>
+                        <p class="text-sm mb-2" style="color: var(--color-secondary);">CAPITAL ONE | Apr 2015 – Jan 2018 | San Francisco, CA</p>
+                        <ul class="list-disc list-inside">
+                            <li>Managed mobile strategy for the Spark Business app, introducing data-informed UX flows that improved deposit success by 10%.</li>
+                            <li>Increased app downloads by 30% and ratings from 3 to 4.5+ stars through data analysis, user feedback, and A/B testing.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Principal Product Manager – Mobile Social Casino</h3>
+                        <p class="text-sm mb-2" style="color: var(--color-secondary);">OPENWAGER | May 2014 – Apr 2015 | San Francisco, CA</p>
+                        <ul class="list-disc list-inside">
+                            <li>Led the development and launch of USA Today's first real-time mobile multiplayer game, achieving a 10x ROI in the first year and a 40% increase in monetization.</li>
+                            <li>Developed a proprietary analytics platform to measure product performance and improve ARM metrics.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Director, Product Management</h3>
+                        <p class="text-sm mb-2" style="color: var(--color-secondary);">TOUT | Jun 2013 – May 2014 | San Francisco, CA</p>
+                        <ul class="list-disc list-inside">
+                            <li>Enhanced digital storytelling through mobile video editing features on iOS and Android, achieving a 4.5+ star rating and media coverage from outlets like The Wall Street Journal and ESPN.</li>
+                            <li>Drove user engagement for a 46M-strong base across 2,800+ websites, integrating gamification and optimizing user flows.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Principal Product Manager, Mobile Games</h3>
+                        <p class="text-sm mb-2" style="color: var(--color-secondary);">ATARI | May 2012 – May 2013 | San Francisco, CA</p>
+                        <ul class="list-disc list-inside">
+                            <li>Played a key role in launching RollerCoaster Tycoon for iOS and Android, defining the product roadmap and executing post-launch strategies.</li>
+                            <li>Successfully launched Atari's first social mobile gaming application.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-2" style="color: var(--color-accent);">Principal Product Manager, Mobile Division</h3>
+                        <p class="text-sm mb-2" style="color: var(--color-secondary);">iWIN | Jun 2011 – May 2012 | San Francisco, CA</p>
+                        <ul class="list-disc list-inside">
+                            <li>Developed product roadmaps and led the successful launch of freemium mobile titles 1v100 and Deal or No Deal, strengthening in-app purchasing through partnerships with mobile social platforms.</li>
+                            <li>Enhanced game quality by establishing KPIs and monitoring metrics for performance improvements.</li>
                         </ul>
                     </div>
                 </div>
@@ -173,7 +213,7 @@
                     <div>
                         <h3 class="text-xl font-semibold mb-4" style="color: var(--color-accent);">Technical Skills</h3>
                         <div>
-                            <span class="skill-pill">Generative AI</span>
+                            <span class="skill-pill">Generative  AI</span>
                             <span class="skill-pill">AI & Machine Learning</span>
                             <span class="skill-pill">SQL</span>
                             <span class="skill-pill">Real-Time Analytics</span>
